United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6732819 Turn off compressed oops by default for now
6732819 : Turn off compressed oops by default for now

Details
Type:
Bug
Submit Date:
2008-08-01
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
runtime
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
hs14

Related Reports
Backport:
Backport:

Sub Tasks

Description
Turn off compressed oops for now to work around bug building jdk.

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/b727c32788a9
                                     
2008-08-11
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-rt/hotspot/rev/2bb5ef5c8a2d
                                     
2008-08-05
EVALUATION

CompressedOops seems to be causing fatal errors on amd64 platforms. Change the default behavior of the VM to have CompOops OFF by default until we can run down the root cause of the errors.
                                     
2008-08-02



Hardware and Software, Engineered to Work Together