6732819: Turn off compressed oops by default for now

Workaround for CompOops bug

Reviewed-by: coleenp